--- a/requirements.txt
+++ b/requirements.txt
@@ -17,9 +17,11 @@ itsdangerous==2.0.1
 Jinja2==3.1.4
 MarkupSafe==2.1.5
 mysqlclient==2.2.4
+numpy==1.26.4
 packaging==24.0
 pillow==10.3.0
 SQLAlchemy==2.0.30
+text-unidecode==1.3
 typing_extensions==4.11.0
 Werkzeug==3.0.3
 WTForms==3.1.2
